# glad

./: .coverage  .env  .env.dev  .gitignore  .jscpd.json  .pre-commit-config.yaml  .releaserc  .releaserc.yml  .yamllint  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DATABASE.sql  Dockerfile  README.md  TODO.md  committed.toml  conftest.py  docker-compose.devcontainer.yml  docker-compose.yml  manage.py  package-lock.json  package.json  pyproject.toml
.devcontainer/: create.sh  devcontainer.json  reset-db.sh
.devcontainer/backend/: create.sh  devcontainer.json  start.sh
.devcontainer/frontend/: create.sh  devcontainer.json  start.sh
.github/: dependatbot.yml
.github/workflows/: backend.yml  dependabot-auto-merge.yml  docker-publish.yml  pipy-publish.yml  pr-checks.yml  release.yml  update-bot.yml
accounts/: admin.py  apps.py  context_processors.py  middleware.py  models.py  signals.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_passkeycredential.py  0002_userprofile_notify_on_login.py  0003_remove_userprofile_biometric_lock_enabled.py  0004_userprofile_app_lock_enabled.py  0005_remove_userprofile_app_lock_enabled_and_more.py  0006_change_default_timeout_to_15min.py
accounts/tests/: conftest.py  test_email.py  test_middleware.py  test_views.py
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: f40d0541a5f7_initial_migration.py
backend/app/: __init__.py  crud.py  main.py  models.py  utils.py
backend/app/api/: deps.py
backend/app/api/routes/: items.py  users.py
backend/app/core/: __init__.py  config.py  db.py  security.py
backend/app/models/: __init__.py  user.py
backend/app/schemas/: __init__.py  asset.py  auth.py  transaction.py  user.py
backend/app/tests/: conftest.py
backend/app/tests/api/routes/: test_items.py  test_login.py  test_users.py
backend/app/tests/crud/: test_user.py
base/: admin.py  api_views.py  apps.py  forms.py  models.py  urls.py  views.py  widgets.py
base/migrations/: 0001_initial.py  0002_remove_household_created_by_and_more.py
base/templates/: index.html
base/templatetags/: format_money.py
base/tests/: conftest.py  test_api_views.py  test_dashboard_historical.py  test_format_money.py  test_helpers.py  test_views.py  test_widgets.py
data/: .gitignore
docs/: database.md
finance/: admin.py  apps.py  context_processors.py  forms.py  models.py  signals.py  urls.py  utils.py  views.py
finance/fixtures/: investmentaccounttype.yaml  savingaccounttype.yaml
finance/migrations/: 0001_initial.py  0002_accounttype_data.py  0002_alter_investmentaccount_cash_balances_and_more.py  0002_alter_investmentaccountholding_initial_quantity_and_more.py  0002_increase_quantity_max_digits.py  0003_alter_investmentaccountholdinghistory_options_and_more.py  0003_investmentaccountdeposit_update_account_cash_and_more.py  0003_remove_account_created_by_remove_account_updated_by_and_more.py  0004_remove_investmentaccountholdinghistory_subtract_from_cash_and_more.py  0004_rename_balance_account_initial_balance_and_more.py  0005_account_description_account_institution_and_more.py  0005_alter_investmentaccountholdinghistory_options_and_more.py  0006_alter_savingaccountdeposit_deposit_date_and_more.py  0006_remove_account_description_account_commentaire.py  0007_investmentaccount_is_favorite_and_more.py
finance/models/: base.py  investment_account.py  saving_account.py
finance/tests/: conftest.py  helpers.py  test_admin.py  test_api_views.py  test_chart_views.py  test_csv_export.py  test_csv_export_synthesis.py  test_csv_import.py  test_csv_views_extended.py  test_deposit_signals.py  test_favorite.py  test_index_view_context.py  test_investment_account_model.py  test_investment_account_progression.py  test_investment_views.py  test_legacy_views_module.py  test_saving_account_model.py  test_saving_views.py  test_update_views.py  test_utils.py  test_views.py
finance/views/: __init__.py  api_views.py  chart_views.py  crud_views.py  csv_views.py  index_views.py  investment_views.py  saving_views.py  update_views.py
frontend/: vite.config.ts
glad/: asgi.py  settings.py  urls.py  wsgi.py
property/: admin.py  apps.py  context_processors.py  forms.py  models.py  urls.py  utils.py  views.py
property/migrations/: 0001_initial.py  0002_property_shares_count_alter_property_address_and_more.py  0002_remove_property_created_by_and_more.py  0003_alter_property_address.py  0004_propertyloan.py  0005_propertyloan_insurance_rate_propertyloan_lender.py  0006_propertyexpense_recurrence_end_date_and_more.py  0007_propertymanager_tenant_and_more.py  0007_remove_propertyexpense_recurrence_start_date_and_more.py  0008_make_monthly_payment_insurance_nullable.py  0009_propertyloanschedule.py  0010_property_number_of_rooms.py  0011_alter_propertyloan_insurance_rate_and_more.py  0012_alter_propertyloan_insurance_rate_and_more.py  0013_remove_propertyledgerentry_property_pr_propert_e17344_idx_and_more_squashed_0018_alter_property_buying_value_gross.py  0016_add_cerfa_category_to_amortization_asset.py  (+30 more)
scripts/: generate_fixtures.py  reset-db.sh  start.sh
static/: manifest.json  service-worker.js  site.css
templates/: 400.html  403.html  404.html  500.html  _account_placeholder_skeleton.html  _chart_range_buttons.html  _csv_preview_table.html  _form_field.html  _form_non_field_errors.html  _prop_scroll_item.html  base.html  index.html  logout.html
tests/: conftest.py
(+161 files in other folders)
