[project]
name = "glad"
version = "0.1.0"
description = "Web app to follow its investments and properties"

authors = [{ name = "Aohzan", email = "aohzan@gmail.com" }]
maintainers = [{ name = "Aohzan", email = "aohzan@gmail.com" }]

readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE.md" }

dependencies = [
    "django>=5.2",
    "django-countries>=7.6.1",
    "django-money>=3.5.4",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pylint>=3.3.6",
    "pytest>=8.3.5",
    "ruff>=0.11.7",
]
