[project]
name = "glad"
version = "0.0.0"
description = "Web app to follow its investments and properties"

authors = [{ name = "Aohzan", email = "aohzan@gmail.com" }]
maintainers = [{ name = "Aohzan", email = "aohzan@gmail.com" }]

readme = "README.md"
requires-python = ">=3.14"
license = { file = "LICENSE.md" }

dependencies = [
    "django>=6.0.3",
    "dotenv>=0.9.9",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.35.0",
    "psycopg[binary]>=3.1.18", # PostgreSQL adapter
    "whitenoise>=6.9.0",
    "dateparser>=1.2.2",
    "django-money>=3.5.4",
    "webauthn>=2.1.0",
]

[project.optional-dependencies]
build = ["uv>=0.7", "python-semantic-release>=9.8.0"]

[dependency-groups]
dev = [
    "beautifulsoup4>=4.13.4",
    "django-stubs>=5.1.2",
    "djangorestframework-stubs>=3.15.1",
    "pre-commit>=4.2.0",
    "pylint>=3.3.6",
    "pylint-django>=2.6.1",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-django>=4.11.1",
    "pytest-picked>=0.5.0",
    "ruff>=0.11.7",
    "ty>=0.0.20",
    "types-python-dateutil>=2.9.0",
]

[tool.semantic_release]
build_command = """
    python -m pip install -e '.[build]'
    uv lock --upgrade-package "$PACKAGE_NAME"
    git add uv.lock
    uv build
"""

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.branches.beta]
match = "beta"
prerelease = true
prerelease_token = "beta"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "glad.settings"

[tool.coverage.run]
branch = true
relative_files = true
source = ["accounts", "base", "finance", "property"]
omit = ["*/migrations/*", "*/tests/*", "*/conftest.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.pylint]
load-plugins = ["pylint_django"]
django-settings-module = "glad.settings"

[tool.pyright]
include = ["."]
exclude = [
    "**/__pycache__",
    "**/migrations",
    "**/node_modules",
    "**/.*",
    ".venv",
    "venv",
]
pythonVersion = "3.14"
typeCheckingMode = "basic"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownParameterType = false
reportUnknownArgumentType = false

[build-system]
requires = ["setuptools>=82", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["glad*", "accounts*", "base*", "finance*", "property*"]
exclude = ["data*", "locale*", "static*", "templates*"]
