[project]
name = "glad"
version = "0.1.0"
description = "Web app to follow its investments and properties"

authors = [{ name = "Aohzan", email = "aohzan@gmail.com" }]
maintainers = [{ name = "Aohzan", email = "aohzan@gmail.com" }]

readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE.md" }

dependencies = [
    "fastapi>=0.115.12",
    "pyjwt>=2.10.1",
    "pydantic-settings>=2.9.1",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.2",
    "pydantic[email]>=2.11.3",
    "python-multipart>=0.0.20",
    "alembic>=1.15.2",
    "sqlmodel>=0.0.24",
    "bcrypt>=4.3.0",
    "emails>=0.6",
    "jinja2>=3.1.6",
    "tenacity>=9.1.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pycodestyle>=2.13.0",
    "pydocstyle>=6.3.0",
    "pylint>=3.3.6",
    "pytest>=8.3.5",
]
